
    MAPREDUCE-2817. MiniRMCluster hardcodes 'mapred.local.dir' configuration 
    to 'build/test/mapred/local'. (rkanter via tucu)

    MAPREDUCE-5133. TestSubmitJob.testSecureJobExecution is flaky due to job 
    dir deletion race. (sandyr via tucu)

    HDFS-4699. Additional conditions for avoiding unnecessary 
    DataNode.checkDiskError calls. (Chris Nauroth via kihwal)

Release 1.2.1 - Unreleased 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    MAPREDUCE-5206. Ensure that a job doesn't get added to RetiredJobs
    multiple times in JobTracker. (acmurthy)

    MAPREDUCE-5148. Fix MAPREDUCE-4970 to ensure task-log4j.properties is
    available for previous installs by putting it in hadoop-core.jar.
    (acmurthy)

Release 1.2.0 - 2013.05.05

  INCOMPATIBLE CHANGES

    HDFS-4350. Make enabling of stale marking on read and write paths
    independent. (Andrew Wang via suresh)

  NEW FEATURES

    MAPREDUCE-4660. Update task placement policy for network topology
    with node group. (Junping Du via llu)

    HADOOP-8023. Add unset() method to Configuration (tucu)

    MAPREDUCE-4355. Add RunningJob.getJobStatus() (kkambatl via tucu)

    MAPREDUCE-987. Exposing MiniDFS and MiniMR clusters as a single process 
    command-line (philip and ahmed via tucu)

    HDFS-385. Backport: Add support for an experimental API that allows a
    module external to HDFS to specify how HDFS blocks should be placed.
    (Sumadhur Reddy Bolli via szetszwo)

    HADOOP-7754. Expose file descriptors from Hadoop-wrapped local 
    FileSystems (todd and ahmed via tucu)

    MAPREDUCE-461. Enable service-plugins for JobTracker. (Fredrik Hedberg and
    Brandon Li via vinodkv)

    HDFS-3912. Detect and avoid stale datanodes for writes.
    (Jing Zhao via suresh)

    HADOOP-8988. Allow configuration of authorization for JmxJsonServlet and 
    MetricsServlet. (tucu, Jing Zhao via suresh)
