@@ -40,6 +40,12 @@ Release 1.3.0 - unreleased
     HDFS-4699. Additional conditions for avoiding unnecessary 
     DataNode.checkDiskError calls. (Chris Nauroth via kihwal)
 
+    MAPREDUCE-5218. Annotate (comment) internal classes as Private. 
+    (kkambatl via tucu)
+
+    MAPREDUCE-5217. Fix DistCP to work when launched by Oozie on a secure
+    cluster. (Venkat Ranganathan via sseth)
+
 Release 1.2.1 - Unreleased 
 
   INCOMPATIBLE CHANGES
